// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget-3level.acceptance given: [journey] 3-level hierarchy: l3 awaits l2 awaits l1 when: [t0] artifact created, only l1 runs then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.vision.guard.review.i1.8739656801d5e77f22.r1.md
   │
   ├─ r2: advanced-checker (l2, 0/5)
   │   └─ awaits arrival
   │
   ├─ r3: premium-checker (l3, 0/5)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: basic-checker (l1, 1/5)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .route/1.vision.guard.review.i1.8739656801d5e77f22.r1.md
      │   ├─ r2: advanced-checker (l2, 0/5)
      │   │   └─ awaits l1 terminal
      │   └─ r3: premium-checker (l3, 0/5)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-3level.acceptance given: [journey] 3-level hierarchy: l3 awaits l2 awaits l1 when: [t1] l1 passes, l2 unlocks, l3 still awaits then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 2/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.vision.guard.review.i2.dfc5faff83ea2fcb55.r1.md
   │
   ├─ r2: advanced-checker (l2, 1/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.vision.guard.review.i2.dfc5faff83ea2fcb55.r2.md
   │
   ├─ r3: premium-checker (l3, 0/5)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: basic-checker (l1, 2/5)
      │   │   ├─ approved [TIME]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .route/1.vision.guard.review.i2.dfc5faff83ea2fcb55.r1.md
      │   ├─ r2: advanced-checker (l2, 1/5)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .route/1.vision.guard.review.i2.dfc5faff83ea2fcb55.r2.md
      │   └─ r3: premium-checker (l3, 0/5)
      │       └─ awaits l2 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-3level.acceptance given: [journey] 3-level hierarchy: l3 awaits l2 awaits l1 when: [t2] l2 passes, l3 unlocks and runs then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 3/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.vision.guard.review.i3.457fd5ef46e053a35e.r1.md
   │
   ├─ r2: advanced-checker (l2, 2/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.vision.guard.review.i3.457fd5ef46e053a35e.r2.md
   │
   ├─ r3: premium-checker (l3, 1/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.vision.guard.review.i3.457fd5ef46e053a35e.r3.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: basic-checker (l1, 3/5)
      │   │   ├─ approved [TIME]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .route/1.vision.guard.review.i3.457fd5ef46e053a35e.r1.md
      │   ├─ r2: advanced-checker (l2, 2/5)
      │   │   ├─ approved [TIME]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .route/1.vision.guard.review.i3.457fd5ef46e053a35e.r2.md
      │   └─ r3: premium-checker (l3, 1/5)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       └─ review: .route/1.vision.guard.review.i3.457fd5ef46e053a35e.r3.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-3level.acceptance given: [journey] 3-level hierarchy: l3 awaits l2 awaits l1 when: [t3] l3 passes, stone passes then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 4/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.vision.guard.review.i4.d1bd0b8547352e6396.r1.md
   │
   ├─ r2: advanced-checker (l2, 3/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.vision.guard.review.i4.d1bd0b8547352e6396.r2.md
   │
   ├─ r3: premium-checker (l3, 2/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.vision.guard.review.i4.d1bd0b8547352e6396.r3.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   ├─ r1: basic-checker (l1, 4/5)
   │  │   │   ├─ approved [TIME]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .route/1.vision.guard.review.i4.d1bd0b8547352e6396.r1.md
   │  │   ├─ r2: advanced-checker (l2, 3/5)
   │  │   │   ├─ approved [TIME]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .route/1.vision.guard.review.i4.d1bd0b8547352e6396.r2.md
   │  │   └─ r3: premium-checker (l3, 2/5)
   │  │       ├─ approved [TIME]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .route/1.vision.guard.review.i4.d1bd0b8547352e6396.r3.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
